--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: main-app-deployment
   labels:
-    app: nginx
+    app: main-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      app: main-app
   template:
     metadata:
       labels:
-        app: nginx
+        app: main-app
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.17
+      - name: main-app
+        image: dungleonhart/sample-flask-app:1.0
         ports:
-        - containerPort: 80
+        - containerPort: 5000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: main-app-service
 spec:
   selector:
-    app: nginx
+    app: main-app
   ports:
     - protocol: TCP
       port: 9090
-      targetPort: 80
-  type: NodePort
+      targetPort: 5000
+  type: LoadBalancer
