--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,7 @@
 name: Build and Push Docker Image
 
 on:
-  pull_request:
+  push:
     branches:
       - main
 
@@ -11,20 +11,43 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v4
       with:
         context: .
         push: true
-        tags: your_dockerhub_username/your_repository_name:pr-${{ github.event.number }}
+        tags: ${{ secrets.DOCKER_USERNAME }}/sample-flask-app:${{ github.event.number }}
+  
+  update-tag:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout the other repository
+        uses: actions/checkout@v3
+        with:
+          repository: ${{ secrets.DOCKER_USERNAME }}/argocd-sample-configuration  # Change to the repository that needs the update
+          token: ${{ secrets.GITHUB_TOKEN }}  # Ensure this has write access
+          path: argocd-sample-configuration
+
+      # Update the image tag in the repository's file
+      - name: Update Docker image tag
+        run: |
+          sed -i 's|image: ${{ secrets.DOCKER_USERNAME }}/sample-flask-app:.*|image: ${{ secrets.DOCKER_USERNAME }}/sample-flask-app:${{ github.event.number }}|' argocd-sample-configuration/deployment.yml
+          cd argocd-sample-configuration
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add deployment.yml
+          git commit -m "Update Docker image tag to latest"
+          git push
