--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/sample-flask-app:${{ github.event.number }}
+        tags: ${{ secrets.DOCKER_USERNAME }}/sample-flask-app:${{ github.sha }}
   
   update-tag:
     needs: build
