--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,7 +44,7 @@ jobs:
       # Update the image tag in the repository's file
       - name: Update Docker image tag
         run: |
-          sed -i 's|image: ${{ secrets.DOCKER_USERNAME }}/sample-flask-app:.*|image: ${{ secrets.DOCKER_USERNAME }}/sample-flask-app:${{ github.event.number }}|' argocd-sample-configuration/deployment.yml
+          sed -i 's|image: ${{ secrets.DOCKER_USERNAME }}/sample-flask-app:.*|image: ${{ secrets.DOCKER_USERNAME }}/sample-flask-app:${{ github.event.number }}|' argocd-sample-configuration/deployment.yaml
           cd argocd-sample-configuration
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
