--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,6 +48,6 @@ jobs:
           cd argocd-sample-configuration
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add deployment.yml
+          git add deployment.yaml
           git commit -m "Update Docker image tag to latest"
           git push
