--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: ${{ secrets.DOCKER_USERNAME }}/argocd-sample-configuration  # Change to the repository that needs the update
-          token: ${{ secrets.GITHUB_TOKEN }}  # Ensure this has write access
+          token: ${{ secrets.PAT_TOKEN }} 
           path: argocd-sample-configuration
 
       # Update the image tag in the repository's file
